# swagger.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "version": "2.0.6",
+    "version": "2.0.1",
     "title": "Callboard API docs",
     "description": "API documentation for GoIT project 'Callboard'. [Backend github repository](https://github.com/DanTsvirkun/callboard-backend)",
     "license": {
@@ -9,10 +9,7 @@
       "url": "https://opensource.org/licenses/MIT"
     }
   },
-  "servers": [
-    { "url": "https://callboard-backend.goit.global" },
-    { "url": "https://callboard-backend.herokuapp.com" }
-  ],
+  "servers": [{ "url": "https://callboard-backend.goit.global" }],
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "tags": [
@@ -253,6 +250,38 @@
       }
     },
     "/call": {
+      "get": {
+        "tags": ["Call"],
+        "summary": "Get pages with categories by query pagination",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Number of the page you want to load (1-3)",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetCalls"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid query) / No token provided",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized (invalid access token)",
+            "content": {}
+          }
+        }
+      },
       "post": {
         "tags": ["Call"],
         "summary": "Post a call",
@@ -298,40 +327,89 @@
           }
         }
       },
-      "get": {
+      "patch": {
         "tags": ["Call"],
-        "summary": "Get pages with categories by query pagination",
+        "summary": "Edit call",
+        "security": [{ "Bearer": [] }],
         "parameters": [
           {
-            "name": "page",
-            "in": "query",
-            "description": "Number of the page you want to load (1-3)",
-            "required": true
+            "name": "callId",
+            "in": "path",
+            "description": "Call's id ('id' field in call's object)",
+            "required": true,
+            "type": "string"
           }
         ],
+        "requestBody": {
+          "description": "Call's object (at least 1 field is required)",
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/PatchCallRequest"
+              }
+            }
+          },
+          "required": true
+        },
         "responses": {
           "200": {
             "description": "Successful operation",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/GetCalls"
+                  "$ref": "#/components/schemas/CallResponse"
                 }
               }
             }
           },
           "400": {
-            "description": "Bad request (invalid query) / No token provided",
+            "description": "Bad request (invalid request body or id) / No token provided / Setting the same price / More than 5 images provided / Setting a price for: Free, work or trade category",
             "content": {}
           },
           "401": {
             "description": "Unauthorized (invalid access token)",
             "content": {}
+          },
+          "404": {
+            "description": "Call not found / Invalid user / Invalid session",
+            "content": {}
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Call"],
+        "summary": "Delete user's call",
+        "security": [{ "Bearer": [] }],
+        "parameters": [
+          {
+            "name": "callId",
+            "in": "path",
+            "description": "Call's id ('id' field in call's object)",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Successful operation",
+            "content": {}
+          },
+          "400": {
+            "description": "Bad request (invalid id) / No token provided",
+            "content": {}
+          },
+          "401": {
+            "description": "Unauthorized (invalid access token)",
+            "content": {}
+          },
+          "404": {
+            "description": "Call not found / Invalid user / Invalid session",
+            "content": {}
           }
         }
       }
     },
-    "/call/favourite/{callId}": {
+    "/call/favourite": {
       "post": {
         "tags": ["Call"],
         "summary": "Add call to favourites",
@@ -417,89 +495,6 @@
         }
       }
     },
-    "/call/{callId}": {
-      "patch": {
-        "tags": ["Call"],
-        "summary": "Edit call",
-        "security": [{ "Bearer": [] }],
-        "parameters": [
-          {
-            "name": "callId",
-            "in": "path",
-            "description": "Call's id ('id' field in call's object)",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "requestBody": {
-          "description": "Call's object (at least 1 field is required)",
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "$ref": "#/components/schemas/PatchCallRequest"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CallResponse"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad request (invalid request body or id) / No token provided / Setting the same price / More than 5 images provided / Setting a price for: Free, work or trade category",
-            "content": {}
-          },
-          "401": {
-            "description": "Unauthorized (invalid access token)",
-            "content": {}
-          },
-          "404": {
-            "description": "Call not found / Invalid user / Invalid session",
-            "content": {}
-          }
-        }
-      },
-      "delete": {
-        "tags": ["Call"],
-        "summary": "Delete user's call",
-        "security": [{ "Bearer": [] }],
-        "parameters": [
-          {
-            "name": "callId",
-            "in": "path",
-            "description": "Call's id ('id' field in call's object)",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "Successful operation",
-            "content": {}
-          },
-          "400": {
-            "description": "Bad request (invalid id) / No token provided",
-            "content": {}
-          },
-          "401": {
-            "description": "Unauthorized (invalid access token)",
-            "content": {}
-          },
-          "404": {
-            "description": "Call not found / Invalid user / Invalid session",
-            "content": {}
-          }
-        }
-      }
-    },
     "/call/favourites": {
       "get": {
         "tags": ["Call"],
@@ -565,6 +560,8 @@
             "name": "search",
             "in": "query",
             "description": "Call's title",
+            "minLength": 1,
+            "maxLength": 100,
             "required": true
           }
         ],
@@ -628,7 +625,7 @@
         }
       }
     },
-    "/call/specific/{category}": {
+    "/call/specific": {
       "get": {
         "tags": ["Call"],
         "summary": "Get calls from one category",
@@ -687,11 +684,15 @@
           "email": {
             "type": "string",
             "description": "User's email",
+            "minLength": 3,
+            "maxLength": 254,
             "format": "email"
           },
           "password": {
             "type": "string",
             "description": "User's password",
+            "minLength": 8,
+            "maxLength": 100,
             "example": "qwerty123"
           }
         }
@@ -723,11 +724,15 @@
           "email": {
             "type": "string",
             "description": "User's email",
+            "minLength": 3,
+            "maxLength": 254,
             "format": "email"
           },
           "password": {
             "type": "string",
             "description": "User's password",
+            "minLength": 8,
+            "maxLength": 100,
             "example": "qwerty123"
           }
         }
@@ -1142,11 +1147,15 @@
           "title": {
             "type": "string",
             "description": "Call's title",
+            "minLength": 2,
+            "maxLength": 100,
             "example": "Red Shirt"
           },
           "description": {
             "type": "string",
             "description": "Call's description",
+            "minLength": 2,
+            "maxLength": 100,
             "example": "New red shirt, made from cotton"
           },
           "category": {
@@ -1167,6 +1176,8 @@
           "price": {
             "type": "integer",
             "description": "Call's price",
+            "minimum": 0,
+            "maximum": 1000000000,
             "example": 0
           },
           "phone": {
@@ -1320,11 +1331,15 @@
           "title": {
             "type": "string",
             "description": "Call's title",
+            "minLength": 2,
+            "maxLength": 100,
             "example": "Red Shirt"
           },
           "description": {
             "type": "string",
             "description": "Call's description",
+            "minLength": 2,
+            "maxLength": 100,
             "example": "New red shirt, made from cotton"
           },
           "category": {
@@ -1345,6 +1360,8 @@
           "price": {
             "type": "integer",
             "description": "Call's price",
+            "minimum": 0,
+            "maximum": 1000000000,
             "example": 0
           },
           "phone": {
@@ -1356,11 +1373,6 @@
             "type": "string",
             "description": "Call's image (could be more than one, maximum 5)",
             "format": "binary"
-          },
-          "imageUrls": {
-            "type": "string",
-            "description": "Stringified array of image URLs. Set here links to old photos (on GCP). Use if you want to delete existing photos (send stringified array with all links except the one you want to delete)",
-            "example": "'[https://storage.googleapis.com/kidslikev2_bucket/b11127c9-e65c-44de-ad12-deded8612bbf.jpg]'"
           }
         }
       },
